social icon mobile fixes

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -279,7 +279,10 @@ h4 {
     text-align: center;
     background: url(../images/logo-bg.jpg) no-repeat center;
     background-size: cover;
-    padding: 8rem 6rem;
+    padding: 8rem 6rem 6rem;
+    @media screen and (max-width: 48rem) {
+        padding: 2rem;
+    }
     .row {
 
         > div {
@@ -304,8 +307,17 @@ h4 {
     .fa-instagram {
         color: #D5708E; //#FFFCD6,#EBEFCE,#B4DDCB,#D5708E,#604C6F,#FFFCD6,#EBEFCE,#B4DDCB
     }
+    .fa-bandcamp {
+        color: #feb904;
+    }
     .fa-itunes {
-        color: white;
+        color: #999;
+    }
+    .fa-youtube {
+        color: red;
+    }
+    .fa-vimeo {
+        color: #00ADEF;
     }
     svg {
         path {
